# modulo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  README.md  aica-package.toml  build-server.sh  build.sh  cla-signatures.json  index.html  update_version.sh
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/common/: build-test.sh
.github/workflows/: build-release.yaml  build-test.yml  check-contribution.yml  generate-docs.yml  test.yml
doxygen/: doxygen.conf
doxygen/docs/: README.md
source/modulo_component_interfaces/: CMakeLists.txt  README.md  package.xml
source/modulo_components/: CMakeLists.txt  README.md  package.xml
source/modulo_controller_interface/: CMakeLists.txt  README.md  package.xml
source/modulo_controller_interface/controller_descriptions/: modulo_controller_interface_modulo_controller_interface.json  modulo_controller_interface_robot_controller_interface.json
source/modulo_controller_interface/include/modulo_controller_interface/: modulo_controller_interface.hpp  robot_controller_interface.hpp
source/modulo_controller_interface/include/modulo_controller_interface/utils/: utilities.hpp
source/modulo_controller_interface/src/: modulo_controller_interface.cpp  robot_controller_interface.cpp
source/modulo_controller_interface/test/: test_modulo_controller_interface.cpp
source/modulo_controller_interface/test/include/test_modulo_controller_interface/: communication_nodes.hpp
source/modulo_controllers/: CMakeLists.txt  README.md  package.xml
source/modulo_controllers/controller_descriptions/: modulo_controllers_base_controller_interface.json  modulo_controllers_controller_interface.json  modulo_controllers_modulo_controller_interface.json  modulo_controllers_robot_controller_interface.json
source/modulo_controllers/extension_descriptions/: modulo_controllers_base_controller_interface.yaml  modulo_controllers_controller_interface.yaml  modulo_controllers_robot_controller_interface.yaml
source/modulo_controllers/include/modulo_controllers/: BaseControllerInterface.hpp  ControllerInterface.hpp  RobotControllerInterface.hpp  modulo_controller_interface.hpp  robot_controller_interface.hpp
source/modulo_controllers/include/modulo_controllers/utils/: utilities.hpp
source/modulo_controllers/src/: BaseControllerInterface.cpp  ControllerInterface.cpp  RobotControllerInterface.cpp  controller_interface.cpp  modulo_controller_interface.cpp  robot_controller_interface.cpp
source/modulo_controllers/test/: test_controller_interface.cpp  test_modulo_controller_interface.cpp
source/modulo_controllers/test/include/test_modulo_controllers/: communication_nodes.hpp
source/modulo_core/: CMakeLists.txt  README.md  package.xml
source/modulo_interfaces/: CMakeLists.txt  README.md  package.xml
source/modulo_interfaces/msg/: Assignment.msg  EncodedState.msg  JointPositions.msg  JointPositionsCollection.msg  Predicate.msg  PredicateCollection.msg
source/modulo_utils/: CMakeLists.txt  README.md  package.xml
source/modulo_utils/include/modulo_utils/: parsing.hpp  predicate_variant.hpp
source/modulo_utils/include/modulo_utils/exceptions/: AddServiceException.hpp  AddSignalException.hpp  LookupTransformException.hpp  ModuloException.hpp  ParameterException.hpp
source/modulo_utils/include/modulo_utils/testutils/: PredicatesListener.hpp  ServiceClient.hpp
source/modulo_utils/modulo_utils/: binary_io.py  encoded_state_recorder.py  exceptions.py  parsing.py
source/modulo_utils/modulo_utils/testutils/: lifecycle_change_client.py  predicates_listener.py  ros.py  service_client.py
source/modulo_utils/src/testutils/: PredicatesListener.cpp
source/modulo_utils/test/cpp/testutils/: test_available_fixtures.cpp
source/modulo_utils/test/python/: conftest.py  test_available_fixtures.py  test_binary_io.py  test_encoded_state_recorder.py
versions/develop/: _add_service_exception_8hpp_source.html  _add_signal_exception_8hpp_source.html  _component_8cpp_source.html  _component_8hpp_source.html  _component_exception_8hpp_source.html  _component_interface_8cpp_source.html  _component_interface_8hpp_source.html  _component_parameter_exception_8hpp_source.html  _core_exception_8hpp_source.html  _encoded_state_8hpp_source.html  _invalid_pointer_cast_exception_8hpp_source.html  _invalid_pointer_exception_8hpp_source.html  _lifecycle_component_8cpp_source.html  _lifecycle_component_8hpp_source.html  _lookup_transform_exception_8hpp_source.html  _message_pair_8cpp_source.html  _message_pair_8hpp_source.html  _message_pair_interface_8cpp_source.html  _message_pair_interface_8hpp_source.html  _message_translation_exception_8hpp_source.html  _message_type_8hpp_source.html  _null_pointer_exception_8hpp_source.html  _parameter_translation_exception_8hpp_source.html  _predicates_listener_8cpp_source.html  _predicates_listener_8hpp_source.html  _publisher_handler_8hpp_source.html  _publisher_interface_8cpp_source.html  _publisher_interface_8hpp_source.html  _publisher_type_8hpp_source.html  _service_client_8hpp_source.html  _subscription_handler_8cpp_source.html  _subscription_handler_8hpp_source.html  _subscription_interface_8cpp_source.html  _subscription_interface_8hpp_source.html  annotated.html  classes.html  classmodulo__components_1_1_component-members.html  classmodulo__components_1_1_component.html  classmodulo__components_1_1_component_interface-members.html  classmodulo__components_1_1_component_interface.html  (+98 more)
versions/main/: _add_service_exception_8hpp_source.html  _add_signal_exception_8hpp_source.html  _base_controller_interface_8cpp_source.html  _base_controller_interface_8hpp_source.html  _component_8cpp_source.html  _component_8hpp_source.html  _component_exception_8hpp_source.html  _component_interface_8cpp_source.html  _component_interface_8hpp_source.html  _component_parameter_exception_8hpp_source.html  _controller_interface_8cpp_source.html  _controller_interface_8hpp_source.html  _core_exception_8hpp_source.html  _encoded_state_8hpp_source.html  _invalid_pointer_cast_exception_8hpp_source.html  (+199 more)
(+1116 files in other folders)
